tests/baselines/reference/-57087-37.errors.txt
-57087-37.ts(11,6): error TS1360: Type '{ ({ x, y }: { x: 1; y: 1; }): "111"; (): "221"; ({ x }: { x: 2; }): "221"; ({ y }: { y: 1; }): "221"; ({ x, y }: { x: 2; y: 1; }): "221"; ({ x, y }: { x: 2; y: 2; }): "222"; }' does not satisfy the expected type 'Garg37A & Garg37B'.


==== -57087-37.ts (1 errors) ====
    interface Garg37A {
        ({x,y}:{x:1, y:1}): "111"
    };
    interface Garg37B {
        ({x,y}:{x?:2, y?:1}): "221"
        ({x,y}:{x:2, y?:2}): "222";
    };
    
    
    declare const f37d: { ({x,y}:{x:1, y:1}): "111"; (): "221"; ({x}:{x:2}): "221"; ({y}:{y:1}): "221"; ({x,y}:{x:2, y:1}): "221"; ({x,y}:{x:2, y:2}): "222"; }
    f37d satisfies Garg37A & Garg37B; // should satisfy but can't (known limitation)
         ~~~~~~~~~
!!! error TS1360: Type '{ ({ x, y }: { x: 1; y: 1; }): "111"; (): "221"; ({ x }: { x: 2; }): "221"; ({ y }: { y: 1; }): "221"; ({ x, y }: { x: 2; y: 1; }): "221"; ({ x, y }: { x: 2; y: 2; }): "222"; }' does not satisfy the expected type 'Garg37A & Garg37B'.
    